--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+label[data-scope='checkbox']{
+    padding: 0 !important;
+    border: none;
+}
+label[data-scope='checkbox'] div[data-part='control']{
+    border-width: 1px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+.chakra-input{
+    padding: 8px 12px;
+    border-width: 1px;
 }
